Decrease bg size to prevent overflow

--- a/src/sass/layout/_team.scss
+++ b/src/sass/layout/_team.scss
@@ -45,10 +45,10 @@
 		}
 
 		@include sc-breakpoint(1024) {
-			width: 894px;
+			width: 716px;
 			height: 490px;
 			bottom: -28px;
-			right: -73px;
+			right: 6px;
 		}
 
 		@include sc-breakpoint(1400) {
